Update users spec
