# app/controllers/authentication_controller.rb
@@ -8,7 +8,7 @@ class AuthenticationController < ApplicationController
       token = JsonWebToken.encode(user_id: @user.id)
       time = Time.now + 24.hours.to_i
       render json: { token: token, exp: time.strftime("%m-%d-%Y %H:%M"),
-                     username: @user.username }, status: :ok
+                     username: @user.username, email: @user.email }, status: :ok
     else
       render json: { error: 'unauthorized' }, status: :unauthorized
     end
