# swagger/v1/swagger.yaml
@@ -26,7 +26,7 @@ paths:
           - password
       responses:
         '200':
-          description: successful
+          description: ok
         '401':
           description: unauthorized
   "/comments":
@@ -106,40 +106,34 @@ paths:
         '200':
           description: successful
   "/users":
-    get:
-      summary: list users
-      responses:
-        '200':
-          description: successful
     post:
       summary: create user
+      tags:
+      - User
+      consumes:
+      - application/json
+      parameters:
+      - name: user
+        in: body
+        schema:
+          type: object
+          properties:
+            name:
+              type: string
+            username:
+              type: string
+            email:
+              type: string
+            password:
+              type: string
+            password_confirmation:
+              type: string
+          required:
+          - name
+          - username
+          - email
+          - password
+          - password_confirmation
       responses:
-        '200':
-          description: successful
-  "/users/{_username}":
-    parameters:
-    - name: _username
-      in: path
-      type: string
-      description: _username
-      required: true
-    get:
-      summary: show user
-      responses:
-        '200':
-          description: successful
-    patch:
-      summary: update user
-      responses:
-        '200':
-          description: successful
-    put:
-      summary: update user
-      responses:
-        '200':
-          description: successful
-    delete:
-      summary: delete user
-      responses:
-        '200':
+        '201':
           description: successful
